+add: fonts +add: FakeSplashScreen

--- a/pokemon/pokemon/AppConfigs/Plists/Info.plist
+++ b/pokemon/pokemon/AppConfigs/Plists/Info.plist
@@ -21,5 +21,10 @@
 		<key>UIStatusBarStyle</key>
 		<string>UIStatusBarStyleDarkContent</string>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Ketchum.ttf</string>
+		<string>KetchumItalic.ttf</string>
+	</array>
 </dict>
 </plist>
