--- a/pokemon/pokemon/AppConfigs/Plists/Info.plist
+++ b/pokemon/pokemon/AppConfigs/Plists/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Ketchum.ttf</string>
+		<string>KetchumItalic.ttf</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -21,10 +26,9 @@
 		<key>UIStatusBarStyle</key>
 		<string>UIStatusBarStyleDarkContent</string>
 	</dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Ketchum.ttf</string>
-		<string>KetchumItalic.ttf</string>
-	</array>
+	<key>UILaunchScreen</key>
+	<false/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleDarkContent</string>
 </dict>
 </plist>
